--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # data/clean_videos/*
 # data/raw_videos/*
 **/__pycache__/
+models/video_depth_anything/checkpoints/video_depth_anything_vits.pth
 # outputs
