#24 - Fuse with segmentation & change segment model

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# data/clean_videos/*
-# data/raw_videos/*
+data/clean_videos/*
+data/raw_videos/*
 **/__pycache__/
 models/video_depth_anything/checkpoints/video_depth_anything_vits.pth
-# outputs
+outputs
+models/bisenet_v2/weights/*
