--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,10 +1,14 @@
 io:
   output_fps: 25
   output_size: [640, 360]
+  prefetch: 8
+  write_queue: 64
+  cpu_threads: 0
+  warmup_iters: 12
 
 camera:
   height_m: 1.35
-  fov_deg_h: 73.0
+  fov_deg_h: 68.0
   principal: [0.5, 0.5]
 
 models:
@@ -110,50 +114,66 @@ models:
     xformers: true
 
 tracking:
-  type: "ocsort"
-  max_age: 30
-  iou: 0.3
+  yolo:
+    max_age: 1
+    iou: 0.3
+  obs:
+    max_age: 1
+    iou: 0.3
 
 fusion:
-  distance_thresholds_m: [1.8, 3.5]
-  plane_fit:
-    inlier_thr_m: 0.05
-    max_iter: 256
-    sample_stride: 4
-    ema_beta: 0.90
-    use_sidewalk: false
-    use_terrain: false
-    refit_every: 12
-    alpha_clamp: [0.75, 1.25]
-    freeze_inlier_min: 300
-  gating:
-    yolo_occ_min: 0.06
-    yolo_kill_after: 3
   edge_obstacle:
-    edge_percentile_str: 92.0
-    edge_percentile_weak: 85.0
-    mag_thr_rel: 1.00
-    mag_thr_rel_weak: 0.85
+    edge_percentile_str: 96.0
+    edge_percentile_weak: 92.0
+    mag_thr_rel: 1.20
+    mag_thr_rel_weak: 1.00
     gauss_k: 5
     gauss_sigma: 1.15
     depth_min_m: 0.35
     depth_max_m: 12.0
-    area_min_m2_k: 2.0e-4
+    area_min_m2_k: 6.0e-4
     snap_dx_px: 24
     snap_dy_px: 24
-    min_w_px: 6
-    min_h_px: 6
+    min_w_px: 10
+    min_h_px: 10
+    snap_ignore_bottom_frac: 0.10
+    bottom_h_free_m: 0.07
+    bottom_band_px: 12
+    bottom_min_drop_m: 0.12
+
   bev:
-    x_min: -10.0
-    x_max: 10.0
-    z_min: 0.0
-    z_max: 40.0
-    cell: 0.20
-    h_min_m: 0.18
     win: 2
-    boost_lambda: 0.20
+    boost_lambda: 0.15   # giảm nhẹ boost để tránh khuếch đại nhiễu
+
+  obstacle:
+    nms_iou: 0.45
+    topk: 15
+
+  depth_percentile:
+    yolo_q: 0.40
+    obs_q: 0.35
+    foot_band_px: 12
+
+  depth_metric:
+    scale_k: 2.2        # tăng lên -> khoảng cách lớn hơn, giảm xuống -> nhỏ hơn
+    median_region: bottom
+    region_frac: 0.5    # dùng nửa dưới khung hình
+    clip_min_m: 0.2
+    clip_max_m: 80.0
+
+  obs_sliver:
+    min_w_px: 8
+    min_h_px: 8
+    min_area_px: 64
+    slender_ar_min: 2.8
+    slender_w_max_px: 20
+    center_merge_px: 22
+    center_z_thr_m: 0.6
+    yolo_cover_thr: 0.90
+    z_min_keep_m: 0.2
+    z_max_keep_m: 80.0
     
 viz:
-  thickness: 1
+  thickness: 2
   font_scale: 0.45
   show_fps: true
