--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ models/video_depth_anything/checkpoints/video_depth_anything_vits.pth
 outputs
 models/bisenet_v2/weights/*
 .vscode/
+runtime_configs/
